# illini-snake

./: LICENSE  README.md  conf.py  food.py  game.py  index.rst  main.py  requirements.txt  screen.py  settings.json  setup.cfg  setup.py  snake.py  square.py
.github/workflows/: kabbes_smart_documentation.yml
_build/doctrees/: environment.pickle  illini_snake.doctree  index.doctree  modules.doctree
docs/: .buildinfo  genindex.html  illini_snake.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/illini_snake/: base.html  food.html  game.html  screen.html  snake.html  square.html  utils.html
docs/_sources/: illini_snake.rst.txt  modules.rst.txt
src/: base.py  food.py  game.py  screen.py  settings.json  snake.py
src/illini_snake/: __init__.py  __main__.py  base.py  food.py  game.py  screen.py  settings.json  snake.py  square.py  utils.py
