[metadata]
name = illini_snake
version = 0.2.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = An illini-themed snake game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/illini-snake
project_urls =
    GitHub = https://github.com/jameskabbes/illini-snake
    Documentation = https://jameskabbes.github.io/illini-snake
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src